--- a/article/article016_test.html
+++ b/article/article016_test.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
 	<meta property="og:title" content="提升親子關係：親子「特別遊戲時間」" />
-	<meta property="og:description" content="透過親子特別遊戲時間，孩子可以表達自己並釋放情緒。了解如何促進良好的親子互動。" />
+	<meta property="og:description" content="遊戲就像是孩子的語言，是成長過程中的重要部分，孩子透過玩會「玩出想法和感受」，釋放情緒同時發揮想像力及創造力。而親子「特別遊戲時間」比普通玩遊戲更多了一重意義。孩子除了可透過這個專屬於他的時間安心地以最舒服自在的⽅式表達自己，整理內在經驗，還可以讓想法和感受於安全環境下得以表達，過程中爸爸媽媽亦能透過與孩子的互動更了解子女的情感需要。" />
 	<meta property="og:image" content="../images/Article/article016.png" />
 	<meta property="og:url" content="article/article016_test.html" />
 
