--- a/article/article01.html
+++ b/article/article01.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
+	<meta property="og:title" content="⾔語治療是甚麼? 我的孩⼦需要嗎?" />
+	<meta property="og:description" content="今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需要，言語治療師都能為你提供協助。" />
+	<meta property="og:image" content="../images/Article/article001.png" />
+	<meta property="og:url" content="article/article01.html" />
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- bootstrap-css -->
@@ -36,6 +40,41 @@
 				event.preventDefault();
 				$('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
 			});
+		});
+	</script>
+
+	<script>
+		// Toggle the visibility of the share menu
+		function toggleShareMenu() {
+			const menu = document.getElementById('share-menu');
+			if (menu.style.display === 'block') {
+				menu.style.display = 'none';
+			} else {
+				menu.style.display = 'block';
+			}
+		}
+
+		// Sharing to WhatsApp
+		function shareToWhatsApp() {
+			const url = encodeURIComponent(window.location.href);
+			const text = encodeURIComponent('看看這篇文章！');
+			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
+		}
+
+		// Sharing to Facebook
+		function shareToFacebook() {
+			const url = encodeURIComponent(window.location.href); // The current page URL
+			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
+		}
+
+
+		// Close the menu when clicking outside it
+		document.addEventListener('click', (event) => {
+			const menu = document.getElementById('share-menu');
+			const button = document.querySelector('.btn-success');
+			if (!menu.contains(event.target) && event.target !== button) {
+				menu.style.display = 'none';
+			}
 		});
 	</script>
 	<!--[if lt IE 9]>
@@ -82,9 +121,12 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../our-services/enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="../our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -133,7 +175,38 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+					<div style="display: flex; justify-content: space-between; align-items: center;">
+						<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+						<div style="position: relative; display: inline-block;">
+							<button class="btn btn-success"
+								style="position: relative; display: flex; align-items: center;"
+								onclick="toggleShareMenu()">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+									class="bi bi-share" viewBox="0 0 16 16" style="margin-right: 5px;">
+									<path
+										d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3" />
+								</svg>
+								Share
+							</button>
+							<div id="share-menu"
+								style="display: none; position: absolute; top: 40px; left: 0; background: #f8f9fa; border: 1px solid #ddd; padding: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
+								<button class="btn btn-primary"
+									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
+									onclick="shareToWhatsApp()">
+									<img src="../images/whatsapp2.png"
+										style="width: 24px; height: 24px; vertical-align: middle; margin-right: 3px;">
+									WhatsApp
+								</button>
+								<button class="btn btn-primary"
+									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
+									onclick="shareToFacebook()">
+									<img src="../images/facebook.png"
+										style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">
+									Facebook
+								</button>
+							</div>
+						</div>
+					</div>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：15-05-2024</p>
 				</div>
@@ -175,7 +248,8 @@
 					<h3><b>第三類：社交溝通問題</b></h3>
 					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就關係到社交溝通層面。<br><br>
 
-					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
+					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say
+					it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
 					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式(how)說合宜的內容(what)。<br><br>
 					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問題，導致社交溝通障礙。<br><br>
 					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
