--- a/article/article011.html
+++ b/article/article011.html
@@ -7,6 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
+	<meta property="og:title" content="執行功能是甚麼?" />
+	<meta property="og:description" content="執行功能是甚麼？執行功能，英文叫Excecutive Function，是指完成⽬標時所應用的認知功能，簡單來說即是執行的能力。..." />
+	<meta property="og:image" content="../images/Article/article011.png" />
+	<meta property="og:url" content="article/article011.html" />
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- bootstrap-css -->
@@ -36,6 +40,41 @@
 				event.preventDefault();
 				$('html,body').animate({ scrollTop: $(this.hash).offset().top }, 1000);
 			});
+		});
+	</script>
+
+	<script>
+		// Toggle the visibility of the share menu
+		function toggleShareMenu() {
+			const menu = document.getElementById('share-menu');
+			if (menu.style.display === 'block') {
+				menu.style.display = 'none';
+			} else {
+				menu.style.display = 'block';
+			}
+		}
+
+		// Sharing to WhatsApp
+		function shareToWhatsApp() {
+			const url = encodeURIComponent(window.location.href);
+			const text = encodeURIComponent('看看這篇文章！');
+			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
+		}
+
+		// Sharing to Facebook
+		function shareToFacebook() {
+			const url = encodeURIComponent(window.location.href); // The current page URL
+			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
+		}
+
+
+		// Close the menu when clicking outside it
+		document.addEventListener('click', (event) => {
+			const menu = document.getElementById('share-menu');
+			const button = document.querySelector('.btn-success');
+			if (!menu.contains(event.target) && event.target !== button) {
+				menu.style.display = 'none';
+			}
 		});
 	</script>
 	<!--[if lt IE 9]>
@@ -136,7 +175,38 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>執行功能是甚麼?</h2>
+					<div style="display: flex; justify-content: space-between; align-items: center;">
+						<h2>執行功能是甚麼?</h2>
+						<div style="position: relative; display: inline-block;">
+							<button class="btn btn-success"
+								style="position: relative; display: flex; align-items: center;"
+								onclick="toggleShareMenu()">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+									class="bi bi-share" viewBox="0 0 16 16" style="margin-right: 5px;">
+									<path
+										d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.5 2.5 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5m-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3" />
+								</svg>
+								Share
+							</button>
+							<div id="share-menu"
+								style="display: none; position: absolute; top: 40px; left: 0; background: #f8f9fa; border: 1px solid #ddd; padding: 10px; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
+								<button class="btn btn-primary"
+									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
+									onclick="shareToWhatsApp()">
+									<img src="../images/whatsapp2.png"
+										style="width: 24px; height: 24px; vertical-align: middle; margin-right: 3px;">
+									WhatsApp
+								</button>
+								<button class="btn btn-primary"
+									style="background-color: transparent; border-color: transparent; color: rgb(5, 77, 49);"
+									onclick="shareToFacebook()">
+									<img src="../images/facebook.png"
+										style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">
+									Facebook
+								</button>
+							</div>
+						</div>
+					</div>
 					<p>撰文：諾道團隊</p>
 					<p>已更新：01-11-2024</p>
 				</div>
@@ -152,7 +222,7 @@
 
 					<h4><b>反應抑制</b></h4>
 					反應抑制，英文叫Response Inhibition，意指一個人在完成⽬標的過程中能考慮後果及情況再作行動。這種能力包括控制自⼰、忍住衝動，不去做一些與⽬標不相關或相⽭盾的行為。<br><br>
-					
+
 					反應抑制能力弱的常見例子：<br>
 					• 經常沒有考慮後果便衝動行事<br>
 					• 未有聽完指示便行動<br>
@@ -162,8 +232,9 @@
 					• 容易發脾氣<br><br>
 
 					<h4><b>持久專注力</b></h4>
-					持久專注力，英文叫Sustained attention，是指在一段持續時間中，專注於完成工作或任務的能力。能持久專注的人即使在完成⽬標的過程中受到⼲擾，又或是在疲累或乏味的情況下仍能夠保持專注力，以完成工作為⽬標。反之，缺乏持久專注力的人容易被無關重要的事物⼲擾⽽分心，難以貫徹地執行任務。<br><br>
-					
+					持久專注力，英文叫Sustained
+					attention，是指在一段持續時間中，專注於完成工作或任務的能力。能持久專注的人即使在完成⽬標的過程中受到⼲擾，又或是在疲累或乏味的情況下仍能夠保持專注力，以完成工作為⽬標。反之，缺乏持久專注力的人容易被無關重要的事物⼲擾⽽分心，難以貫徹地執行任務。<br><br>
+
 					持久專注力弱的常見例子：<br>
 					• 注意力不集中和短暫<br>
 					• 容易受外界⼲擾⽽分心<br>
@@ -172,14 +243,16 @@
 					• 常有疏忽<br><br>
 
 					<h4><b>認知靈活性</b></h4>
-					認知靈活性，英文叫Cognitive Flexibility，是指當事情出現困難或新訊息時，有能力彈性地修改計畫，亦能將過往經驗靈活運用。具備這個應變能力的孩子能在有需要的時候改變注意點和接受改變，靈活思考以想到不同方法解決問題。<br><br>
+					認知靈活性，英文叫Cognitive
+					Flexibility，是指當事情出現困難或新訊息時，有能力彈性地修改計畫，亦能將過往經驗靈活運用。具備這個應變能力的孩子能在有需要的時候改變注意點和接受改變，靈活思考以想到不同方法解決問題。<br><br>
 					認知靈活性弱的常見例子：<br>
 					• 較多固執行為<br>
 					• 不善於尋求協助或嘗試運用不同的方法解決問題<br>
 					• 較難適應突如其來的變化<br><br>
 
 					<h4><b>工作記憶</b></h4>
-					工作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。 工作記憶亦讓一個人能適當分配專注力，即一心幾用。工作記憶容量不足的孩子在生活和學習的各方面都會遭遇挑戰。<br><br>
+					工作記憶，英文叫Working Memory，是指能在短時間內有效地存取多於一項重要資訊，並用相關資訊執行不同任務。
+					工作記憶亦讓一個人能適當分配專注力，即一心幾用。工作記憶容量不足的孩子在生活和學習的各方面都會遭遇挑戰。<br><br>
 
 					工作記憶能力弱的常見例子：<br>
 					• 經常在課堂中「遊魂」/難以專注<br>
@@ -187,7 +260,8 @@
 					• 需要較長時間思考<br><br>
 
 					<h4><b>總結</b></h4>
-					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和自閉症譜系障礙(Autistic Spectrum Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和生活上都遇到較⼤的困難。<br><br>
+					患有專注力不足/過度活躍症(Attention Deficit/Hyperactivity Disorder，簡稱ADHD)和自閉症譜系障礙(Autistic Spectrum
+					Disorder，簡稱ASD)的孩子在執行功能上的發展比同齡人慢，導致他們在學習、社交和生活上都遇到較⼤的困難。<br><br>
 
 					可幸的是，執行功能是可以通過後天訓練得到提升。只要提供適當⽀援，就能提升孩子的執行功能，幫助他們在學習和日常生活上達到更理想的表現。<br><br>
 
